# festral

./: .README.md.swp  .Setup.hs.swp  Dockerfile  Festral.cabal  Festral.hs  Makefile  README.md  Setup.hs  groups  project.config  tct.yml
Builder/: .Meta.hs.swp  Builder.hs  GBSParser.hs  Meta.hs  buildconfig.json
Distribution/: make_debian.sh
Distribution/ManPages/: .manpage-genreator.sh.swp  includes.h2m  manpage-generator.sh  normalize_help.sh
Examples/: buildconfig.json  config.json  gpapi_tests.sh  header.ftc  hs_build_parser.hs  hs_build_parser.sh  libteec.yml  own_xtest_parser.sh  scenario.ftc  tct.yml  tee_test_parser.sh  testconfig.json  xtest.yml
Examples/reports/: summary.js  table.css  template.html
Festral/: .Main.hs.swp  Config.hs  Festral.hs  Files.hs  Main.hs  Meta.hs  Reporter.hs  Template.hs
Festral/Builder/: Builder.hs  GBSParser.hs  Main.hs  Meta.hs  OwnParser.hs  Reporter.hs  buildconfig.json
Festral/Internal/: Files.hs  Logger.hs  Preprocessor.hs
Festral/SLAV/: .Boruta.hs.swp  Boruta.hs  Weles.hs
Festral/SLAV/Boruta/: .Data.hs.swp  .Main.hs.swp  Data.hs  Main.hs
Festral/SLAV/Weles/: Data.hs
Festral/SLAV/Weles/API/: Old.hs  V1.hs  V2.hs
Festral/Tests/: Config.hs  Data.hs  TCTParser.hs  Test.hs  TestParser.hs  XTestParser.hs  config.json  tct.yml
Festral/WWW/: Server.hs  TestGUI.hs
Festral/WWW/reports/: template.html
Festral/Weles/: API.hs  Boruta.hs  Main.hs  YamlTemplate.hs  tct.yml  tf.yml
WWW/: download.php  funcs.php  getlog.php  reports.php
WWW/reports/: test.html
