Name:       Festral
Version:    0.8.13
Cabal-Version: >= 1.2
License:    BSD3
Author:     Uladzislau Harbuz
Homepage:
Category:   Testing
Synopsis:   Manage jobs and tests of Weles server
Build-Type: Simple

Library
    Build-Depends:
        base,
        curl-aeson,
        curl,
        aeson,
        process,
        bytestring,
        split,
        optparse-applicative,
        semigroups,
        time,
        directory >= 1.2.3.0,
        unix >= 2.7.2.2,
        monad-parallel,
        filepath,
        wai, warp, http-types, blaze-builder, utf8-string,
        filesystem-trees,
        time,
        temporary >= 1.2.1
    Exposed-modules:
       Festral.SLAV.Weles,
       Festral.SLAV.Boruta,
       Festral.Template,
       Festral.Builder.Builder,
       Festral.Builder.Meta,
       Festral.Builder.GBSParser,
       Festral.Builder.OwnParser,
       Festral.Tests.TestParser,
       Festral.Tests.Test,
       Festral.Config,
       Festral.Files,
       Festral.Reporter

Executable festral
    Main-Is:        Festral/Main.hs
    Ghc-Options: -threaded
