Name:               Festral
Version:            1.1.1
Cabal-Version:      >= 1.2
License:            Apache-2.0
License-file:       LICENSE
Copyright:          (c) 2018 Samsung Electronics Co., Ltd All Rights Reserved
Author:             Uladzislau Harbuz
Homepage:
Category:           Testing
Synopsis:           System for automation of building and testing software repositories
Build-Type:         Simple

Library
    Build-Depends:
        base,
        curl-aeson,
        curl,
        aeson,
        process,
        bytestring,
        split,
        optparse-applicative,
        semigroups,
        time,
        directory >= 1.2.3.0,
        unix >= 2.7.2.2,
        monad-parallel,
        filepath,
        wai, warp, http-types, blaze-builder, utf8-string,
        filesystem-trees,
        time,
        temporary >= 1.2.1,
        ansi-terminal, MissingH,
        text
    Exposed-modules:
       Festral.SLAV.Weles,
       Festral.SLAV.Boruta,
       Festral.Template,
       Festral.Builder.Builder,
       Festral.Meta,
       Festral.Builder.GBSParser,
       Festral.Builder.OwnParser,
       Festral.Tests.TestParser,
       Festral.Tests.Test,
       Festral.Config,
       Festral.Internal.Files,
       Festral.Reporter

Executable festral
    Main-Is:        Festral/Main.hs
    Ghc-Options: -threaded
