Name:               Festral
Version:            1.2.6
Cabal-Version:      >= 1.2
License:            Apache-2.0
License-file:       LICENSE
Copyright:          (c) 2018-2019 Samsung Electronics Co., Ltd All Rights Reserved
Author:             Uladzislau Harbuz
Homepage:           https://github.com/SamsungSLAV/festral
Category:           Testing
Synopsis:           System for automation of building and testing software repositories
Build-Type:         Simple

Library
    Build-Depends:
        base,
        curl-aeson,
        curl,
        aeson,
        process,
        bytestring,
        split,
        optparse-applicative,
        semigroups,
        time,
        directory >= 1.2.3.0,
        unix >= 2.7.2.2,
        monad-parallel,
        filepath,
        wai, warp, http-types, blaze-builder, utf8-string,
        filesystem-trees,
        time,
        temporary >= 1.2.1,
        ansi-terminal, MissingH,
        text
    Exposed-modules:
       Festral.Builder.Builder,
       Festral.Builder.GBSParser,
       Festral.Builder.OwnParser,
       Festral.Config,
       Festral.Internal.Files,
       Festral.Internal.Logger,
       Festral.Internal.Preprocessor,
       Festral.Meta,
       Festral.Reporter,
       Festral.SLAV.Boruta.Data,
       Festral.SLAV.Weles,
       Festral.SLAV.Boruta,
       Festral.Template,
       Festral.Tests.TestParser,
       Festral.Tests.Data,
       Festral.Tests.Test,
       Festral.WWW.TestGUI,
       Festral.WWW.Server,
       Paths_Festral

Executable festral
    Main-Is:        Festral/Main.hs
    Ghc-Options: -threaded
    Other-modules:
       Festral.Builder.Builder,
       Festral.Builder.GBSParser,
       Festral.Builder.OwnParser,
       Festral.Config,
       Festral.Internal.Files,
       Festral.Internal.Logger,
       Festral.Internal.Preprocessor,
       Festral.Meta,
       Festral.Reporter,
       Festral.SLAV.Weles,
       Festral.Template,
       Festral.Tests.TestParser,
       Festral.Tests.Data,
       Festral.Tests.Test,
       Festral.WWW.TestGUI,
       Festral.WWW.Server,
       Paths_Festral

Executable farmer
    Main-Is:        Festral/SLAV/Boruta/Main.hs
    Ghc-Options: -threaded
    Other-modules:
       Festral.Config,
       Festral.Internal.Files,
       Festral.Internal.Logger,
       Festral.SLAV.Boruta,
       Festral.SLAV.Boruta.Data,
       Festral.Meta,
       Paths_Festral
